Added social feed

--- a/style.css
+++ b/style.css
@@ -84,15 +84,19 @@
     padding-bottom: 1.5rem;
     animation: moveInFromLeft 2s;
     animation-fill-mode: backwards;
+
+    
+    
 }
 .header-main-content {
     padding-top: 15rem;
     padding-left: 4rem;
 }
 .bg-white-txt {
-    background-color: #fff;
-    color: royalblue;
+    background-color: royalblue;
+    //color: royalblue;
     padding: 0 5px;
+    //padding: 0;
     
 }
 
@@ -242,3 +246,20 @@ box-shadow:         8px 8px 22px 0px rgba(50, 50, 50, 0.27);
     //width: 100vw;
     box-sizing: border-box;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
